# basic-memory

./: AGENTS.md  CHANGELOG.md  README.md  justfile  llms-install.md  pyproject.toml  server.json
.claude/: settings.json
.github/workflows/: test.yml
docs/: ai-assistant-guide-extended.md  logfire-instrumentation-strategy.md  metadata-search.md
docs/releases/: v0.19.0.md
src/basic_memory/: __init__.py  config.py  file_utils.py  ignore_utils.py  runtime.py  telemetry.py  utils.py
src/basic_memory/api/: app.py
src/basic_memory/cli/: analytics.py  app.py  auto_update.py  main.py  promo.py
src/basic_memory/importers/: utils.py
src/basic_memory/indexing/: __init__.py  batch_indexer.py  models.py
src/basic_memory/markdown/: entity_parser.py  schemas.py  utils.py
src/basic_memory/mcp/: async_client.py  project_context.py  server.py
src/basic_memory/models/: base.py  knowledge.py  search.py
src/basic_memory/repository/: embedding_provider.py  embedding_provider_factory.py  entity_repository.py  openai_provider.py  (+7 more)
test-int/: conftest.py  test_db_wal_mode.py  test_disable_permalinks_integration.py  test_search_performance_benchmark.py
test-int/cli/: test_project_commands_integration.py  test_routing_integration.py
test-int/mcp/: test_build_context_underscore.py  test_delete_note_integration.py  test_edit_note_integration.py  test_move_note_integration.py  test_output_format_json_integration.py  test_pagination_integration.py  test_string_params_integration.py
test-int/semantic/: corpus.py  test_search_diagnostics.py  test_semantic_coverage.py
tests/: conftest.py  test_coerce.py  test_config.py  test_production_cascade_delete.py  test_rclone_commands.py  test_telemetry.py
tests/cli/: test_analytics.py  test_auto_update.py  test_cli_schema.py  test_cli_telemetry.py  test_cli_tool_json_output.py  test_cloud_authentication.py  test_cloud_promo.py  test_db_reindex.py  test_ignore_utils.py  test_json_output.py  test_project_add_with_local_path.py  test_project_info_cloud_status.py  test_project_list_and_ls.py  test_project_set_cloud_local.py  test_update_command.py  test_workspace_commands.py
tests/db/: test_issue_254_foreign_key_constraints.py
tests/indexing/: test_batch_indexer.py
tests/markdown/: test_date_frontmatter_parsing.py  test_entity_parser_error_handling.py  test_markdown_processor.py  test_markdown_utils.py  test_observation_edge_cases.py  test_parser_edge_cases.py  test_relation_edge_cases.py
tests/mcp/: conftest.py  test_async_client_modes.py  test_async_client_telemetry.py  test_client_schema.py  test_client_telemetry.py  test_permalink_collision_file_overwrite.py  test_project_context.py  test_project_context_telemetry.py  test_prompt_tool_delegation.py  test_prompts.py  test_recent_activity_prompt_modes.py  test_server_telemetry.py  test_tool_build_context.py  test_tool_contracts.py  test_tool_delete_note.py  test_tool_edit_note.py  test_tool_move_note.py  test_tool_project_management.py  test_tool_read_note.py  test_tool_recent_activity.py  test_tool_schema.py  test_tool_search.py  test_tool_telemetry.py  test_tool_utils.py  test_tool_utils_cloud_auth.py  test_tool_workspace_management.py  test_tool_write_note.py  test_tool_write_note_metadata.py  test_ui_sdk.py
tests/repository/: test_entity_repository.py  test_entity_repository_upsert.py  test_entity_upsert_issue_187.py  test_fastembed_provider.py  test_hybrid_fusion.py  test_hybrid_rrf.py  test_metadata_filters_edge_cases.py  test_observation_repository.py  test_openai_provider.py  test_postgres_search_repository.py  test_postgres_search_repository_unit.py  test_relation_repository.py  test_repository.py  test_search_repository.py  test_search_repository_edit_bug_fix.py  test_search_text_with_metadata_filters.py  test_semantic_search_base.py  test_sqlite_vector_search_repository.py  test_vector_pagination.py  test_vector_threshold.py
tests/schema/: test_inference.py  test_resolver.py  test_validator.py
tests/schemas/: test_schemas.py  test_search.py
tests/services/: test_context_service.py  test_directory_service.py  test_entity_service.py  test_entity_service_disable_permalinks.py  test_entity_service_telemetry.py  test_entity_service_write_result.py  test_file_service.py  test_initialization.py  test_link_resolver.py  test_project_removal_bug.py  test_project_service.py  test_project_service_embedding_status.py  test_search_service.py  test_search_service_telemetry.py  test_semantic_search.py  test_task_scheduler_semantic.py  test_upsert_entity_optimization.py
tests/sync/: test_sync_one_markdown_file.py  test_sync_service.py  test_sync_service_incremental.py  test_sync_service_telemetry.py  test_watch_service.py  test_watch_service_reload.py
tests/utils/: test_file_utils.py  test_parse_tags.py  test_setup_logging.py  test_validate_project_path.py
(+83 files in other folders)
